# fry

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  emscripten-index.html  main.cpp
assets/patterns/: sawtooth2.rle
src/: clock.h  colors.h  game.cpp  game.h  gui.cpp  gui.h  main.cpp  main.h  nuklear_sdl.cpp  nuklear_sdl.h  pattern.cpp  pattern.h  patterns.h  primitives.h  sdl_helpers.h  sdl_wrappers.h  simulation.cpp  simulation.h  version.h
src/nuklear/: nuklear.h  nuklear_lib.h
